# llm_api

./: .gitignore  .llm_api.example.json  AGENTS.md  README.md  pyproject.toml
docs/architecture/: README.md
docs/decisions/: README.md
docs/usage/: README.md  other_project_integration.md
examples/public_samples/: README.md  demo_input.json  demo_script.command
original_reference/: README.md  mini_response_client.py
scripts/: verify_image_description.py
skills/use-llm-api/: README.md  SKILL.md
skills/use-llm-api/agents/: openai.yaml
skills/use-llm-api/references/: other_project_integration.md
src/llm_api/: README.md  __init__.py  __main__.py  core.py  errors.py  models.py
src/llm_api/cli/: __init__.py  main.py
src/llm_api/config/: __init__.py  input_extensions.json  input_support.py  settings.py
src/llm_api/parsing/: __init__.py  responses.py
src/llm_api/transport/: __init__.py  client.py
tests/: README.md
tests/cli/: __init__.py  test_main.py
tests/integration/: __init__.py  test_ask.py
tests/unit/: __init__.py  test_config.py  test_core.py  test_parsing.py  test_transport.py
